--- a/final-distribuidos-proyecto/maestra-empresa.Master
+++ b/final-distribuidos-proyecto/maestra-empresa.Master
@@ -215,6 +215,12 @@
                         <span class="nav-link-text">Formato de pelicula</span>
                     </a>
                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center" href="TipoSocio.aspx">
+                        <i class="bi bi-credit-card nav-icon me-2"></i>
+                        <span class="nav-link-text">Tipo socio</span>
+                    </a>
+                </li>
                 <!-- Dropdown Menu -->
                 <li class="nav-item">
                     <a class="nav-link d-flex align-items-center" data-bs-toggle="collapse" href="#submenu" role="button" aria-expanded="false" aria-controls="submenu">
